<resources>
    <string name="app_name">GestorDeEjercicio</string>
    <string name="lunes">Lunes:</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesíon</string>
    <string name="contrasena_olvidada">¿Olvidaste tu contraseña?</string>
    <string name="inicio_facebook">Iniciar con Facebook</string>
    <string name="registrarse">Registrarse</string>
    <string name="tiempo">Tiempo:</string>
    <string name="distancia">Distancia:</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="configurar_informaci_n_personal">Configurar información personal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nombre</string>
    <string name="eliminar_rutina">Eliminar   de mi rutina</string>
    <string name="crear_rutina">Crear nueva rutina</string>
    <string name="facebook_app_id">2749026798504952</string>
    <string name="fb_login_protocol_scheme">fb2749026798504952</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="txt_inicio">Antes de comenzar ingresa tus datos para configurar tus rutinas</string>
    <string name="brazos">Brazos</string>
    <string name="elegir_meta">Seleccione sobre que ejercicio quiere basar su meta para supervisar su progreso y un numero de repeticiones que le gustaria llegar a hacer en dicho ejercicio</string>
    <string name="abdomen">Abdomen</string>
    <string name="piernas">Piernas</string>
    <string name="cambiar_meta">Cambiar meta</string>
    <string name="medir_progreso">Medir Progreso</string>
    <string name="record_repeticiones">Record de repeticiones:</string>
    <string name="repeticiones_promedio">Repeticiones promedio:</string>
    <string name="correr">Correr:</string>
    <string name="repeticiones_alcanzar">No. repeticiones a alcanzar</string>
    <string name="imc">IMC:</string>
    <string name="aclaracion">Estos ejercicios no forman pare de tu rutina pero realizarlos te servira para mantener una estadistica sobre tus avances al ejercitar</string>
    <string name="contador_help">Presione la pantalla para comenzar y presione de nuevo cuando termine</string>
    <string name="siguiente_dia">Siguiente Dia</string>
    <string name="dificultad">Dificultad:</string>
    <string name="pasos">Pasos:</string>
    <string name="anadir_ejercicios">Añadir ejercicios</string>
    <string name="nombre_ejercicio">Nombre del ejercicio</string>
    <string name="dia_ejercicio">Dia en que realiza el ejercicio</string>
    <string name="repeticiones_realizar">Repeticiones que realizara</string>
    <string name="zona_ejercicio">Zona en que se enfoca el ejercicio</string>
    <string name="crear_ejercicio">Crear Ejercicio</string>
    <string name="ingresar_rep">Ingrese las repeticiones que haya realizdo en este ejercicio</string>
    <string name="confirmar">Confirmar</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="abdominales">Abdominales</string>
    <string name="sentadillas">Sentadillas</string>
    <string name="push_up">Push up</string>
    <string name="alcanzado">Felicidades alcanzo su meta!!! ¿Desea aumentar el numero de repeticiones aun mas o cambiar de meta?</string>
    <string name="salir">Salir</string>
    <string name="cancelar">Cancelar</string>
    <string name="req">Nueva meta</string>

    <string-array name="niveles">
        <item>Principiante</item>
        <item>Intermedio</item>
        <item>Avanzado</item>
    </string-array>
    <string-array name="zonas">
        <item>Brazos</item>
        <item>Abdomen</item>
        <item>Pierna</item>
    </string-array>
    <string-array name="intervalos">
        <item>Cada dia</item>
        <item>Cada semana</item>
        <item>Cada mes</item>
    </string-array>
    <string-array name="Dias">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
    </string-array>
    <string-array name="opciones">
        <item>Acondicionamiento</item>
        <item>Martes</item>
        <item>Miercoles</item>
    </string-array>
    <string-array name="informacion_niveles">
        <item>El nivel para principiante está diseñado para cualquier persona que desee comenzar a realizar ejercicior. Se te
                asignará una rutina de acondicionamiento.</item>
        <item> El nivel medio está diseñado para personas que llevan haciendo ejercicio entre 6 y 12 meses.\nPodrás agregar tu
                rutina en caso de que cuentes con una, de no ser así, se te asignará una rutina.</item>
        <item>El nivel avanzado está diseñado para personas que ya tengan experiencia haciendo ejercicio, por lo que podrás
                ingresar tu propia rutina o elegir entre una rutina avanzada o una para tonificar músculos.</item>
    </string-array>
</resources>
