<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Metas">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/elegirMeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <TextView
            android:id="@+id/txtElegirMeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elegir_meta"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="65dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/btnBrazos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtElegirMeta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnAbdomen"
            android:layout_marginTop="25dp"
            android:text="@string/brazos"/>
        <Button
            android:id="@+id/btnAbdomen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtElegirMeta"
            app:layout_constraintStart_toEndOf="@id/btnBrazos"
            app:layout_constraintEnd_toStartOf="@id/btnPiernas"
            android:layout_marginTop="25dp"
            android:text="@string/abdomen"/>
        <Button
            android:id="@+id/btnPiernas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtElegirMeta"
            app:layout_constraintStart_toEndOf="@id/btnAbdomen"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            android:text="@string/piernas"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/progresoMeta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:paddingStart="10dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/txtMeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:text="Meta"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@+id/stats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btnCambiarMeta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtMeta">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/record_repeticiones"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:text="0"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/repeticiones_promedio"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtPromedio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:text="0"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="Ultimas repeticiones realizadas:"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtUltimas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:text="0"
                android:textSize="30sp" />
        </LinearLayout>
        <Button
            android:id="@+id/btnCambiarMeta"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/stats"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnMedirMeta"
            android:text="@string/cambiar_meta"
            android:textSize="17sp"/>
        <Button
            android:id="@+id/btnMedirMeta"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/btnCambiarMeta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stats"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/medir_progreso"
            android:textSize="17sp"/>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>